Fixed misaligned panels in left/right GUI layouts in IE6 and IE7.
git-svn-id: svn+ssh://cvs1/svn/listen/trunk@1567 4692729f-32a0-46b7-9832-1bf53c4881b5

--- a/controller/src/main/webapp-gui/resources/app/css/listen.css
+++ b/controller/src/main/webapp-gui/resources/app/css/listen.css
@@ -569,7 +569,7 @@ table td, table th {
 
 .left {
     float: left;
-    width: 55%;
+    width: 54%;
 }
 
 .right {
